feat: add order management operations and update to record accessors
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>